# WorkRecord

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  api.ts  styles.css  yolo.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: detector.rs  lib.rs  main.rs  models.rs  storage.rs
