[package]
name = "workrecord"
version = "0.1.0"
description = "Rust/Tauri native WorkRecord"
authors = ["WorkRecord"]
license = "AGPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "workrecord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
hmac = "0.12"
base64 = "0.22"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.4.2"
thiserror = "2.0"
